images and navigation path fixed

--- a/RG/RGlogin/templates/about.html
+++ b/RG/RGlogin/templates/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Rabadon's Grimoire</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
-</head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}"> <!-- Link to CSS file --></head>
 <body>
     <!-- Header Section -->
     <header>
@@ -13,10 +13,10 @@
         <!-- Navigation Links -->
             <nav id="nav-links">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="download.html">Download</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="{% url 'home' %}">Home</a></li>
+                    <li><a href="{% url 'about' %}">About</a></li>
+                    <li><a href="{% url 'contact' %}">Contact</a></li>
+                    <li><a href="{% url 'download' %}">Download</a></li>
                 </ul>
             </nav>
             <!-- End of Navigation Links -->
@@ -35,7 +35,7 @@
     <!-- Under Construction Section -->
     <section id="under-construction">
         <h2>Under Construction</h2>
-        <img src="images/under-construction.jpg" alt="Under Construction Image">
+        <img src="{% static 'images/under-construction.jpg' %}" alt="Under Construction Image">
         <p>This page is currently under construction. Please check back later.</p>
     </section>
         
