--- a/RG/RGlogin/templates/signup.html
+++ b/RG/RGlogin/templates/signup.html
@@ -8,7 +8,18 @@
     <h2>Sign Up</h2>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form.username.label_tag }}
+        {{ form.username }}
+        <br>
+        {{ form.email.label_tag }}
+        {{ form.email }}
+        <br>
+        {{ form.password1.label_tag }}
+        {{ form.password1 }}
+        <br>
+        {{ form.password2.label_tag }}
+        {{ form.password2 }}
+        <br>
         <button type="submit">Sign Up</button>
     </form>
 </body>
