--- a/RG/RGlogin/myapp/static/css/styles.css
+++ b/RG/RGlogin/myapp/static/css/styles.css
@@ -55,35 +55,12 @@ section {
 
 /* Authentication section styles */
 /***************************/
-#authentication-section {
-    display: flex; /* Added to make login box a flex container */
-    flex-direction: column; /* Added to stack children vertically */
-    align-items: flex-start; /* Added to align items at the start of the cross axis */
-}
-
-.authentication-box {
-    background-color: #f0f0f0;
-    border-radius: 10px;
-    padding: 20px;
-}
-
-.authentication-box h3 {
-    margin-bottom: 10px;
-}
-
-#authentication-section form {
-    display: flex;
-    flex-direction: column;
-}
-
-#authentication-section input[type="text"],
-#authentication-section input[type="password"],
-#authentication-section button {
-    margin-bottom: 10px;
-}
-
-#authentication-section button {
-    height: 40px; /* Adjust as needed */
+.logout-button {
+    background: none;
+    border: none;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    cursor: pointer;
 }
 /***************************/
 
@@ -120,7 +97,7 @@ section {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: calc(100vh - 200px); /* Adjust the height as needed */
+    height: calc(100vh - 200px);
 }
 /***************************/
 
