--- a/RG/RGlogin/templates/contact.html
+++ b/RG/RGlogin/templates/contact.html
@@ -16,10 +16,13 @@
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'about' %}">About</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
-                <li><a href="{% url 'download' %}">Download</a></li>
-                <!-- Display login and signup buttons based on user authentication -->
                 {% if user.is_authenticated %}
-                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                <li><a href="{% url 'download' %}">Download</a></li>
+                Hi {{ user.username }}!
+                <form action="{% url 'logout' %}" method="post">
+                {% csrf_token %}
+                <button type="submit" class="logout-button">Log Out</button>
+                </form>
                 {% else %}
                     <li><a href="{% url 'login' %}">Login</a></li>
                     <li><a href="{% url 'signup' %}">Signup</a></li>
@@ -27,8 +30,8 @@
             </ul>
         </nav>
         <!-- End of Navigation Links -->
-        <!-- End of Header Section -->
     </header>
+    <!-- End of Header Section -->
 
     <!-- Main Content -->
     <main>
