--- a/RG/RGlogin/templates/signup.html
+++ b/RG/RGlogin/templates/signup.html
@@ -6,21 +6,11 @@
 </head>
 <body>
     <h2>Sign Up</h2>
-    <form method="post">
+    <form method="POST" novalidate>
         {% csrf_token %}
-        {{ form.username.label_tag }}
-        {{ form.username }}
-        <br>
-        {{ form.email.label_tag }}
-        {{ form.email }}
-        <br>
-        {{ form.password1.label_tag }}
-        {{ form.password1 }}
-        <br>
-        {{ form.password2.label_tag }}
-        {{ form.password2 }}
-        <br>
-        <button type="submit">Sign Up</button>
+        <h2>Sign Up</h2>
+        {{ form.as_p }}		
+        <input type="submit" value='signup' />
     </form>
 </body>
 </html>
