--- a/RG/RGlogin/templates/contact.html
+++ b/RG/RGlogin/templates/contact.html
@@ -14,7 +14,7 @@
         <nav id="nav-links">
             <ul>
                 <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="{% url 'about' %}">About</a></li>
+                <li><a href="{% url 'about' %}">About us</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
                 {% if user.is_authenticated %}
                 <li><a href="{% url 'download' %}">Download</a></li>
