--- a/RG/RGlogin/myapp/static/css/styles.css
+++ b/RG/RGlogin/myapp/static/css/styles.css
@@ -64,6 +64,46 @@ section {
 }
 /***************************/
 
+/* Download section styles */
+/***************************/
+#download-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60vh;
+    text-align: center;
+}
+
+.download-box {
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    padding: 40px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* subtle shadow for depth */
+    max-width: 500px;
+}
+
+.download-box h3 {
+    margin-bottom: 15px;
+}
+
+.download-box p {
+    margin-bottom: 20px;
+}
+
+.download-button {
+    background-color: #007bff;
+    color: #ffffff;
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.download-button:hover {
+    background-color: #0056b3;
+}
+/***************************/
+
 /* Image styles */
 /***************************/
 #image-section {
