--- a/RG/RGlogin/templates/download.html
+++ b/RG/RGlogin/templates/download.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Download Rabadon's Grimoire</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}"> <!-- Link to CSS file --></head>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}"> <!-- Link to CSS file -->
+</head>
 <body>
     <!-- Header Section -->
     <header>
@@ -35,12 +36,25 @@
 
     <!-- Main Content -->
     <main>
+        <!-- Introduction Section -->
+        <section id="intro">
+            <h2>Welcome to Rabadon's Grimoire</h2>
+            <p>Thank You for becoming a member!!!</p>
+
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+
         <!-- Download Section -->
-        <section id="download">
-            <h2>Download Rabadon's Grimoire</h2>
-            <p>The companion app will be available for download here once it's ready.</p>
-            <!-- Add a download button or link here -->
+        <section id="download-section">
+            <div class="download-box">
+                <h3>Download Rabadon's Grimoire</h3>
+                <p>Click the button below to download the latest version of Rabadon's Grimoire for Windows.</p>
+                <a href="{% static 'files/RabadonsGrimoireSetup.exe' %}" download="RabadonsGrimoireSetup.exe">
+                    <button type="button"> Download Now</button>
+                </a>
+            </div>
         </section>
+        <!-- End of Download Section -->
     </main>
 
     <!-- Under Construction Section -->
