added homepage design

--- a/RG/RGlogin/templates/contact.html
+++ b/RG/RGlogin/templates/contact.html
@@ -6,7 +6,7 @@
     <title>Contact Rabadon's Grimoire</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}"> <!-- Link to CSS file --></head>
-<body>
+<body class="homepage-background">
     <!-- Header Section -->
     <header>
         <h1>Rabadon's Grimoire</h1>
