--- a/RG/RGlogin/templates/signup.html
+++ b/RG/RGlogin/templates/signup.html
@@ -8,7 +8,7 @@
 </head>
 <body class="signup-background-image">
     <div class="signup-section">
-        <form method="POST" class="sign-up-form" novalidate>
+        <form method="POST" class="signup-form" novalidate>
             {% csrf_token %}
             <h2>Welcome to Rabadon's Grimoire</h2>
             <div class="form-group">
