--- a/RG/RGlogin/myapp/static/css/styles.css
+++ b/RG/RGlogin/myapp/static/css/styles.css
@@ -46,10 +46,18 @@ main {
     justify-content: space-between;
     align-items: flex-start; /* Align items at the start of the cross axis */
     padding: 20px;
+    color: #fff;
 }
 
 section {
     margin-bottom: 30px;
+}
+
+body.homepage-background {
+    background-image: url('../images/homepage.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 /***************************/
 
@@ -61,12 +69,13 @@ section {
     color: rgb(255, 255, 255);
     text-decoration: none;
     cursor: pointer;
+    margin-left: auto;
 }
 /***************************/
 
 /* Sign-up form styles */
 /***************************/
-.sign-up-form {
+.signup-form {
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
@@ -76,44 +85,40 @@ section {
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
 }
 
-.sign-up-form h2 {
+.signup-form h2 {
     text-align: center;
     margin-bottom: 20px;
     color: #ffffff;
 }
 
-.sign-up-form .form-group {
+.signup-form .form-group {
     margin-bottom: 20px;
     color: rgb(255, 255, 255);
 }
 
-.sign-up-form label {
+.signup-form label {
     display: block;
     font-weight: bold;
 }
 
-.sign-up-form input[type="text"],
-.sign-up-form input[type="password"] {
+.signup-form input[type="text"],
+.signup-form input[type="password"] {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 50px;
     box-sizing: border-box;
 }
 
-.sign-up-form input[type="submit"] {
+.signup-form input[type="submit"] {
     width: 100%;
     padding: 10px;
     background-color: #9900ff;
     color: #ffffff;
     border: none;
-    border-radius: 5px;
+    border-radius: 50px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-}
-
-.sign-up-form input[type="submit"]:hover {
-    background-color: #0056b3;
 }
 
 .signup-section {
@@ -135,57 +140,67 @@ section {
 
 /* Login section styles */
 /***************************/
-.login-section {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    background-color: #f0f0f0;
+.login-form {
+    max-width: 400px;
+    margin: 0 auto;
     padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: rgba(68, 68, 68, 0.6);
+    backdrop-filter: blur(10px);
+    border-radius: 5px;
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
 }
 
-/* Form group styles */
+.login-form h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #ffffff;
+}
+
 .login-form .form-group {
     margin-bottom: 20px;
+    color: rgb(255, 255, 255);
 }
 
-/* Label styles */
-.login-form .form-group label {
+.login-form label {
     display: block;
     font-weight: bold;
 }
 
-/* Input field styles */
-.login-form .form-group input {
+.login-form input[type="text"],
+.login-form input[type="password"] {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 50px;
+    box-sizing: border-box;
+}
+
+.login-section {
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    height: 100vh; /* Set the height of the container to 100% of the viewport height */
+    background-color: rgba(255, 255, 255, 0); /* Set the background color with alpha for transparency */
+}
+
+.login-background-image {
+    background-image: url('../images/loginbg.jpg');
+    background-size: cover; /* Cover the entire container with the background image */
+    background-position: center; /* Center the background image */
+    background-repeat: no-repeat; /* Do not repeat the background image */
+    height: 100vh;
 }
 
 /* Login button styles */
 .login-button {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px 20px;
+    width: 100%;
+    padding: 10px;
+    background-color: #e00000;
+    color: #ffffff;
     border: none;
-    border-radius: 5px;
+    border-radius: 50px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-}
-
-.login-button:hover {
-    background-color: #0056b3;
-}
-
-.background-image {
-    background-image: url('path/to/your/image.jpg');
-    background-size: cover; /* Cover the entire container with the background image */
-    background-position: center; /* Center the background image */
-    background-repeat: no-repeat; /* Do not repeat the background image */
 }
 /***************************/
 
@@ -200,7 +215,7 @@ section {
 }
 
 .download-box {
-    background-color: #f0f0f0;
+    background-color: rgba(107, 107, 107, 0.788);
     border-radius: 10px;
     padding: 40px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* subtle shadow for depth */
@@ -236,6 +251,7 @@ section {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    color: #fff;
 }
 
 #images-heading {
@@ -263,6 +279,7 @@ section {
     align-items: center;
     justify-content: center;
     height: calc(100vh - 200px);
+    color: #fff;
 }
 /***************************/
 
