--- a/RG/RGlogin/templates/download.html
+++ b/RG/RGlogin/templates/download.html
@@ -7,7 +7,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}"> <!-- Link to CSS file -->
 </head>
-<body>
+<body class="homepage-background">
     <!-- Header Section -->
     <header>
         <h1>Rabadon's Grimoire</h1>
