added timestamp to css link

--- a/RG/RGlogin/templates/about.html
+++ b/RG/RGlogin/templates/about.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Rabadon's Grimoire</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}"> <!-- Link to CSS file --></head>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}?v={{ timestamp }}"> <!-- Link to CSS file with timestamp -->
+</head>
 <body class="homepage-background">
     <!-- Header Section -->
     <header>
