--- a/RG/RGlogin/templates/signup.html
+++ b/RG/RGlogin/templates/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}?v={{ timestamp }}"> <!-- Link to CSS file with timestamp -->
 </head>
 <body class="signup-background-image">
     <div class="signup-section">
