--- a/RG/RGlogin/templates/download.html
+++ b/RG/RGlogin/templates/download.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Download Rabadon's Grimoire</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}"> <!-- Link to CSS file -->
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}?v={{ timestamp }}"> <!-- Link to CSS file with timestamp -->
 </head>
 <body class="homepage-background">
     <!-- Header Section -->
