--- a/RG/RGlogin/templates/contact.html
+++ b/RG/RGlogin/templates/contact.html
@@ -41,16 +41,9 @@
         <section id="contact">
             <h2>Contact Us</h2>
             <!-- Contact form or contact information goes here -->
-            <p>For users or future gamers with questions about us or our application, please email us at ____@gmail.com. We aim to respond as soon as possible.</p>
+            <p>For users or future gamers with questions about us or our application, please email us at rabadonsgrimoire@gmail.com. We aim to respond as soon as possible. Any bug reports are also appreciated. Thank you!</p>
         </section>
     </main>
-
-    <!-- Under Construction Section -->
-    <section id="under-construction">
-        <h2>Under Construction</h2>
-        <img src="{% static 'images/under-construction.jpg' %}" alt="Under Construction Image">
-        <p>This page is currently under construction. Please check back later.</p>
-    </section>
 
     <!-- Footer Section -->
     <footer>
